# AI-Engineering

./: .gitignore  LICENSE  README.md  pyproject.toml
Data/: README.md  data links.txt
DeepLearningAI Courses/1 PromptEngineering/: README.md
DeepLearningAI Courses/1 PromptEngineering/my notebooks/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb
DeepLearningAI Courses/1 PromptEngineering/original notebooks/: l2-guidelines.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
DeepLearningAI Courses/2 VectorDatabasesWeviate/original notebooks/: L1_Embeddings.ipynb  L2_kNN.ipynb  L3_approximate_nearest_neighbours.ipynb
LocalModel/: local_llm_model.ipynb
LocalModels/: README.md  config.json  local_llm_model.ipynb  local_llm_model.py  testing_bert.ipynb  usage_example.ipynb
